src/objects/CRMfusionDBR101__Scenario_Target_Filter__c.object
<CustomObject>
    <customHelpPage>CRMfusionDBR101__DB_Help</customHelpPage>
    <description>Scenario filter for filtering which records are being matched against.</description>
    <fields>
        <fullName>CRMfusionDBR101__Calculated_Value__c</fullName>
        <label>Calculated Value</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Data_Type__c</fullName>
        <label>Data Type</label>
        <picklist>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Numeric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>String</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Date_Criteria__c</fullName>
        <label>Date Criteria</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Datetime_Criteria__c</fullName>
        <label>Date &amp; Time Criteria</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Display__c</fullName>
        <label>Criteria</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Field_Display_Value__c</fullName>
        <inlineHelpText>Select the field you&apos;d like to filter.</inlineHelpText>
        <label>Filtered Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Field_Name__c</fullName>
        <label>Filtered Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Not__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Automatically generated internally when calculating regex expressions for string evaluation.</description>
        <label>Not</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Object__c</fullName>
        <inlineHelpText>Select the object you&apos;d like to filter.</inlineHelpText>
        <label>Filtered Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Operator__c</fullName>
        <inlineHelpText>Select the type of comparison you&apos;d like for this filter.  See the documentation for full descriptions.</inlineHelpText>
        <label>Operator</label>
        <picklist>
            <picklistValues>
                <fullName>=</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>!=</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;=</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;=</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>contains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>starts with</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ends with</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>does not contain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>does not start with</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>does not end with</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>equals null</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>is not null</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Scenario__c</fullName>
        <label>Scenario</label>
        <referenceTo>CRMfusionDBR101__Scenario__c</referenceTo>
        <relationshipLabel>DupeBlocker Scenario Target Filters</relationshipLabel>
        <relationshipName>Scenario_Target_Filters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Values__c</fullName>
        <label>Filter Criteria</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>DupeBlocker Scenario Target Filter</label>
    <nameField>
        <displayFormat>Target Filter: {0}</displayFormat>
        <label>Target Filter Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DupeBlocker Scenario Target Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>